Day5/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: approute
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /web1
        pathType: Prefix
        backend:
          service:
            name: web1
            port:
              number: 80
  - http:
      paths:
      - path: /web2
        pathType: Prefix
        backend:
          service:
            name: web2
            port:
              number: 80
